// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders custom img 1`] = `
<div
  className="Image-wrapper"
  style={
    Object {
      "maxWidth": 1000,
    }
  }
>
  <div
    className="Image-placeholder"
    style={
      Object {
        "paddingTop": "72%",
      }
    }
  >
    <div>
      foobar
    </div>
  </div>
</div>
`;

exports[`Image renders default 1`] = `
<div
  className="Image-wrapper"
  style={
    Object {
      "maxWidth": 1,
    }
  }
>
  <div
    className="Image-placeholder"
    style={
      Object {
        "paddingTop": "100%",
      }
    }
  >
    <img
      alt="#IMAGE_URL"
      className="Image-source"
      src="#IMAGE_URL"
    />
  </div>
</div>
`;

exports[`Image renders img 1`] = `
<div
  className="Image-wrapper"
  style={
    Object {
      "maxWidth": 1000,
    }
  }
>
  <div
    className="Image-placeholder"
    style={
      Object {
        "paddingTop": "72%",
      }
    }
  >
    <img
      alt="https://placehold.it/1000x720"
      className="Image-source"
      src="https://placehold.it/1000x720"
    />
  </div>
</div>
`;
